Added api method for get fund
